src/objects/ADvendio__CommitmentCondition__c.object
<CustomObject>
    <description>Hold all relevant Information for an Condition related to a Commitment.Here all details stored that are relevant for Discounts and Rebate in Kind in relation to many criterias.
For further Information please have a look at our Wiki under https://advendio.atlassian.net/wiki/display/SO/Knowledge+Base .</description>
    <fields>
        <fullName>ADvendio__AdvertisingMedium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please select the advertising medium if relevant.</description>
        <inlineHelpText>Please select the advertising medium if relevant.</inlineHelpText>
        <label>Advertising Medium</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Commitment Conditions</relationshipLabel>
        <relationshipName>Commitment_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__BaseQuantityRebateInKind__c</fullName>
        <description>Number of Units which need to be bought to get the Rebate.</description>
        <inlineHelpText>Number of Units which need to be bought to get the Rebate.</inlineHelpText>
        <label>Base Quantity Rebate in Kind</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__CashDiscountAdvertiser__c</fullName>
        <description>Customer discount to be applied (within specified revenue range or media classification).</description>
        <inlineHelpText>Customer discount to be applied (within specified revenue range or media classification).</inlineHelpText>
        <label>Cash Discount Advertiser</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__CashDiscountAgency__c</fullName>
        <description>Agency discount to be applied (within specified revenue range or media classification).</description>
        <inlineHelpText>Agency discount to be applied (within specified revenue range or media classification).</inlineHelpText>
        <label>Cash Discount Agency</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Commitment__c</fullName>
        <description>Please pick the relevant commitment.</description>
        <inlineHelpText>Please pick the relevant commitment.</inlineHelpText>
        <label>Commitment</label>
        <referenceTo>ADvendio__Commitment__c</referenceTo>
        <relationshipLabel>Commitment Conditions</relationshipLabel>
        <relationshipName>Commitment_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaDifferentiation__c</fullName>
        <description>Please choose a media differentiation if applicable.</description>
        <inlineHelpText>Please choose a media differentiation if applicable.</inlineHelpText>
        <label>Media Differentiation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaDifferentiation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaSegment__c</fullName>
        <description>Please choose a media segment if applicable.</description>
        <inlineHelpText>Please choose a media segment if applicable.</inlineHelpText>
        <label>Media Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaType__c</fullName>
        <description>Please choose a media type if applicable.</description>
        <inlineHelpText>Please choose a media type if applicable.</inlineHelpText>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PageEquivalency__c</fullName>
        <label>Page Equivalency</label>
        <precision>7</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Progressive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the rebate in kind is applied progressively. The default value is false.</description>
        <inlineHelpText>If checked the rebate in kind is applied progressively. The default value is false.</inlineHelpText>
        <label>Progressive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__RebateInKindPercent__c</fullName>
        <description>Discount which applies if the number of base units was acquired.</description>
        <inlineHelpText>Discount which applies if the number of base units was acquired.</inlineHelpText>
        <label>Rebate In Kind Percent %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RebateInKindQuantity__c</fullName>
        <description>&quot;Free&quot; quantity if the number of base units was acquired.</description>
        <inlineHelpText>&quot;Free&quot; quantity if the number of base units was acquired.</inlineHelpText>
        <label>Rebate in Kind Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RebateInKindUnitsAvailable__c</fullName>
        <description>Shows the number of Rebate in Kind units, which are available to be used in media campaigns.</description>
        <formula>ADvendio__TotalRebateInKindUnitsEarned__c  -  ADvendio__TotalUnitCountApplied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the number of Rebate in Kind units, which are available to be used in media campaigns.</inlineHelpText>
        <label>Rebate in Kind units available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RebateInKindValidUntil__c</fullName>
        <description>Expiration Date of all rebate in kind Commitment Conditions.</description>
        <inlineHelpText>Expiration Date of all rebate in kind Commitment Conditions.</inlineHelpText>
        <label>Rebate In Kind valid until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ScaledDiscountFrom__c</fullName>
        <description>Please enter the lower revenue bound where this Commitment Condition applies.</description>
        <inlineHelpText>Please enter the lower revenue bound where this Commitment Condition applies.</inlineHelpText>
        <label>Scaled Discount from</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__ScaledDiscountTo__c</fullName>
        <description>Please enter the upper revenue bound where this Commitment Condition applies.</description>
        <inlineHelpText>Please enter the upper revenue bound where this Commitment Condition applies.</inlineHelpText>
        <label>Scaled Discount to</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__SpecialDiscount__c</fullName>
        <description>Special Discount (within specified revenue range or media classification).</description>
        <inlineHelpText>Special Discount (within specified revenue range or media classification).</inlineHelpText>
        <label>Special Discount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRebateInKindUnitsEarned__c</fullName>
        <description>Shows the total number of Rebate in Kind units earned with the condition.</description>
        <formula>IF( ISBLANK (ADvendio__RebateInKindQuantity__c) == False ,
			(IF(ADvendio__Progressive__c ,
					FLOOR(( ADvendio__TotalUnitCount__c /  ADvendio__BaseQuantityRebateInKind__c )* ADvendio__RebateInKindQuantity__c )  ,
					(( ADvendio__TotalUnitCount__c /  ADvendio__BaseQuantityRebateInKind__c )* ADvendio__RebateInKindQuantity__c ))),
			(IF( ISBLANK (ADvendio__RebateInKindPercent__c) == False,
				IF(ADvendio__Progressive__c ,
					(FLOOR(( ADvendio__TotalUnitCount__c /  ADvendio__BaseQuantityRebateInKind__c )) * ( ADvendio__BaseQuantityRebateInKind__c * ADvendio__RebateInKindPercent__c )  ) ,
					( ADvendio__TotalUnitCount__c  *   ADvendio__RebateInKindPercent__c ) ),
					0
					)
			)
		)</formula>
        <inlineHelpText>Shows the total number of Rebate in Kind units earned with the condition.</inlineHelpText>
        <label>Total Rebate in Kind units earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRevenueApplied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of revenue for all campaign items where discounts of this condition were applied.</description>
        <inlineHelpText>Total amount of revenue for all campaign items where discounts of this condition were applied.</inlineHelpText>
        <label>Total Revenue applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of revenue of all campaign items which meet the relevant criteria of this rule.</description>
        <inlineHelpText>Total amount of revenue of all campaign items which meet the relevant criteria of this rule.</inlineHelpText>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalUnitCountApplied__c</fullName>
        <description>Counts all units for all campaign items where discounts of this condition were applied.</description>
        <inlineHelpText>Counts all units for all campaign items where discounts of this condition were applied.</inlineHelpText>
        <label>Total Unit count applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalUnitCount__c</fullName>
        <description>Total amount of units of all campaign items which meet the relevant criteria of this rule.</description>
        <inlineHelpText>Total amount of units of all campaign items which meet the relevant criteria of this rule.</inlineHelpText>
        <label>Total Unit count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Unit__c</fullName>
        <description>Select the relevant unit, this Valuescan be edited. In case of PrintUses Cases and Using Rebate inKind Quantity must refer to thevalues Field:ADvendio__PageEquivalency__cat Object AdType. E.g. 1/1 or 1/2will be Rebate in Kind Quantity thisvalues have to be used also inAdTypes.</description>
        <inlineHelpText>Select the relevant unit</inlineHelpText>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__Unit</valueSetName>
        </valueSet>
    </fields>
    <label>Commitment Condition</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commitment Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitment Conditions</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__RebateInKind</fullName>
        <active>true</active>
        <description>Please select if you like to specify a Rebate in Kind, i.e. Buy 2 get 1 free.</description>
        <label>Rebate in Kind</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__RebateInKindPercent</fullName>
        <active>true</active>
        <description>Please select if you like to specify a percental Rebate in Kind.</description>
        <label>Rebate in Kind %</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ScaledDiscount</fullName>
        <active>true</active>
        <description>Please select if you like to specify a scaled quantity discount for either Advertiser and/or Agency.</description>
        <label>Scaled Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__SpecialDiscount</fullName>
        <active>true</active>
        <description>Please select if you like to use special discount.</description>
        <label>Special Discount</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>